@@ -86,7 +86,7 @@ drumkv1widget::drumkv1widget ( QWidget *pParent, Qt::WindowFlags wflags )
 	shapes << tr("Pulse");
 	shapes << tr("Saw");
 	shapes << tr("Sine");
-	shapes << tr("Noise");
+	shapes << tr("Random");
 
 	m_ui.Lfo1ShapeKnob->insertItems(0, shapes);
 
