@@ -6,6 +6,7 @@ ChangeLog
 
 SVN TRUNK
 
+- Badly named 'Noise' wave-shapes re-labeled as 'Random'.
 - New user preference option, cf. Help/Use native dialogs.
 - An anti-denormal regression applied to the Phaser fx stage
   (affecting early proto-beta >= 0.4.0).
